--- a/vue3-vite/src/style.css
+++ b/vue3-vite/src/style.css
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import './style/tailwind/base.css';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
